css/style.css
body{	
	height: 100vh;
	width: 100vw;
	overflow: hidden;
	margin: 0;
}

*{
	-webkit-tap-highlight-color: transparent;
}

::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: lightgrey;
    opacity: 1; /* Firefox */
}

:-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: white;
}

::-ms-input-placeholder { /* Microsoft Edge */
    color: white;
}

.wrapper{
	height: 100%;
	width: 100%;
	overflow: hidden;
}

.navbar{
	height: 50px;
	width: 100%;
	position: fixed;
	left: 0;
	top: 0;
	background: #335C67;
	display: flex;
	justify-content: space-around;
	align-items: center;
	overflow: hidden;
	z-index: 2000;
}

.header{
	font-family: 'Raleway', sans-serif;
	color: white;
	font-size: 2rem;
	user-select: none;
}

.menuButton{
	color: white;
	display: none;
	cursor: pointer;
	user-select: none;
}

.controls{
	display: flex;
	justify-content: space-between;
	align-items: center;
	z-index: 3000;
}

.input-idnumber{
	font-size: 1.5rem;
	padding: 0.5rem 1.5rem;
	font-family: 'Raleway', sans-serif;
	border: 2px solid white;
	background: #335C67;
	border: 2px solid #335C67;
	width: 15rem;
	color: white;
}

.input-idnumber:focus{
	outline: 0;
}

.input-idnumber, .input-week{
	transition: all 0.2s ease-in-out;
}

.input-idnumber:focus, .input-week:focus, .input-idnumber:hover, .input-week:hover{
	background: white;
	border: 2px solid white;
	color: #335C67;
}

.input-week{
	font-size: 1.5rem;
	padding: 0.5rem 1.5rem;
	font-family: 'Raleway', sans-serif;
	background: #335C67;
	border: 2px solid #335C67;
	width: 3rem;
	margin-left: 1rem;
	color: white;
}

.input-week:focus{
	outline: 0;
}

.input-label{
	color: white;
	font-family: 'Raleway', sans-serif;
	user-select: none;
	cursor: pointer;
	font-size: 2rem;
	margin-left: 1rem;
}

#input-day{
	display: none;
}

#input-day-label{
	padding: 0.5rem 1.5rem;
}

.timetable{
	position: fixed;
	bottom: 0;
	left: 0;
	z-index: -1;
}

.info{
	font-family: 'Raleway', sans-serif;
	height: 100vh;
	width: 100vw;
	position: fixed;
	bottom: 0;
	left: 0;
	padding: 5vh 5vh 15vh 5vh;
	box-sizing: border-box;
	overflow-y: scroll;
	z-index: 50000;
	background: white;
	color: black;
    word-wrap: break-word;
    display: none;
}

.infoClose{
	position: fixed;
	bottom: 5vh;
	left: 50%;
	transform: translateX(-50%);
	user-select: none;
	cursor: pointer;
	background: rgb(66, 133, 244); 
	border: 5px solid rgb(66, 133, 244);
	border-radius: 15px;
	color: white;
	padding: 1rem;
	z-index: 9999999999999999;
	-webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
	-moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
	box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
	text-transform: uppercase;
	white-space: nowrap;
}

@media only screen and (max-width: 820px) {
	.navbar{
		white-space: nowrap;
	}

	.controls{
		padding-top: 1vh;
		position: fixed;
		top: 50px;
		left: 0;
		width: 100vw;
		flex-direction: column;
		background: #335C67;
	}

	.control{
		margin-top: 1vh;
	}

	.menuButton{
		display: inline-block;
	}
}

@media only screen and (max-width: 620px) {
}

